style(app): improved design & added html loader
This way images in templates are parsed & copied by webpack

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,3 +1,8 @@
+// styles in src/style directory are applied to the whole page
 body {
-    background: #ccc;
+    background: #0147A7;
+    color: #fff;
+}
+a {
+    color: #34495e;
 }
