--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,19 @@
-.title {
-    font-family: Arial, Helvetica, sans-serif;
+header {
+    background-color: #fff;
+    padding: 16px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
 main {
     padding: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 50px;
+}
+footer {
+    text-align: center;
+    font-size: 0.8em;
 }
