fix(webpack): revert html loader to raw & copy assets to dist when building
The html loader broke the build, not sure why :-/

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <header>
 	<nav>
-		<a [routerLink]=" ['Home'] ">Home</a>
-		<a [routerLink]=" ['About'] ">About</a>
+		<a [routerLink]="['Home']">Home</a>
+		<a [routerLink]="['About']">About</a>
 	</nav>
 </header>
 <main>
@@ -12,6 +12,6 @@
 
 	<router-outlet></router-outlet>
 </main>
-<footer x-large>
+<footer>
 	<a href="{{ url }}">Webpack Angular 2 Starter</a>
 </footer>
