feat(app): adding an example of :host for scoped styles

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,7 @@
+// styles applied on :host are applied on the current component, "app" in this case
+:host {
+    display: block;
+}
 header {
     background-color: #fff;
     padding: 16px;
