--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   <h1 class="title">Hello from {{api.title}} !</h1>
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="/img/shield-with-beta.png">
+  <img src="img/shield-with-beta.png">
 
   <router-outlet></router-outlet>
 </main>
