chore: change interpolation for property binding

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,5 +13,5 @@
   <router-outlet></router-outlet>
 </main>
 <footer>
-  <a href="{{ url }}">Webpack Angular 2 Starter</a>
+  <a [href]="url">Webpack Angular 2 Starter</a>
 </footer>
