--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
-    <a [routerLink]="['Home']">Home</a>
-    <a [routerLink]="['About']">About</a>
+    <a [routerLink]="['']">Home</a>
+    <a [routerLink]="['about']">About</a>
   </nav>
 </header>
 <main>
