--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <nav>
     <a [routerLink]="['']">Home</a>
     <a [routerLink]="['about']">About</a>
+    <a [routerLink]="['lazy']">Lazy</a>
   </nav>
 </header>
 <main>
